syntax = "proto3";

package org.example.grpc;
option java_package = "org.example.grpctest.grpc";
option java_outer_classname = "GreetingServiceProto";
option java_multiple_files = true;

service HelloService{
  rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest{
  string request = 1;
}

message HelloResponse{
  string response = 1;
}